Ensure that showDirs is respected in FolderListModel

Calling index() on a QDirModel can modify the filters applied.
This patch to FolderListModel ensures that filtering is reset if
required, so that programmatically selecting a subfolder in a
folder does not cause that subfolder to become visible if showDirs
is set to false.

Task-number: QTBUG-17837
Reviewed-by: Martin Jones
Change-Id: I449321d5170ecedf2a0cb36483d50020305a26dd